# kokoro-pipeline

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  streamlit_app.py  voice_grades.py
docs/plans/: 2026-03-09-kokoro-migration-design.md  2026-03-09-kokoro-migration.md
docs/superpowers/plans/: 2026-03-16-streaming-and-tokens.md  2026-04-03-kokoro-8bit-migration.md
docs/superpowers/specs/: 2026-03-10-ui-improvements-design.md  2026-03-16-streaming-and-tokens-design.md  2026-04-03-kokoro-8bit-migration-design.md
samples/a/: gatsby.txt  random.txt
samples/b/: random.txt  sherlock.txt
samples/e/: becquer.txt  quijote.txt  random.txt
samples/f/: candide.txt  miserables.txt  random.txt
samples/h/: kabir.txt  rahim.txt  random.txt
samples/i/: promessi.txt  random.txt
samples/j/: botchan.txt  kokoro.txt  random.txt
samples/p/: bras_cubas.txt  iracema.txt  random.txt
samples/z/: lunyu.txt  random.txt  tangshi.txt
tests/: conftest.py  test_app.py  test_streamlit_app.py
