[project]
name = "kokoro-pipeline"
version = "0.3.1"
description = "Streamlit web app for multilingual text-to-speech using Kokoro"
requires-python = ">=3.12"
dependencies = [
    "kokoro>=0.9.4",
    "misaki[ja]",
    "misaki[zh]",
    "numpy>=1.26.0",
    "soundfile",
    "streamlit",
    "scipy",
    "torch",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ty.environment]
python-version = "3.12"
