[project]
name = "kokoro-pipeline"
version = "0.9.0"
description = "Streamlit web app for multilingual text-to-speech using Kokoro-82M (MLX, Mac only)"
requires-python = ">=3.12"
dependencies = [
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "misaki[ja]",
    "misaki[zh]",
    "mlx-audio",
    "numpy>=1.26.0",
    "soundfile",
    "streamlit",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ty.environment]
python-version = "3.12"
